<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backapp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/entrar"

        android:text="@string/Financiera"
        android:textColor="@color/white"
        android:textSize="40dp"></TextView>


    <EditText
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entrar"

        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_login_24"
        android:drawablePadding="20dp"
        android:hint="@string/usuario"
        android:hintTextColor="#263238"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"></EditText>

    <EditText
        android:id="@+id/contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usuario"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="20dp"
        android:hint="@string/Contra"
        android:hintTextColor="#263238"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contrasena"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:text="@string/boton"
        android:textColor="#000000"
        tools:ignore="TextContrastCheck"></com.google.android.material.button.MaterialButton>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/olvidarcontra"
    android:layout_below="@id/btnEntrar"
    android:text="@string/ayuda"
    android:textColor="@color/white"
    android:layout_centerHorizontal="true"
    android:layout_margin="20dp"
></TextView>



</RelativeLayout>